# nhandu

./: .gitignore  CHANGELOG.md  LICENSE  LLM_DOCS.md  Makefile  PUBLISH.md  README.md  ROADMAP_v0.2.0.md  TEMPLATE_COMPARISON_REPORT.md  neocities.sh  pyproject.toml
.github/workflows/: quality.yml
docs/: 01_hello_world.md  01_hello_world.py  02_data_analysis.md  02_data_analysis.py  04_scientific_computation.md  07_jupyter_conversion.md
examples/: 01_hello_world.md.html  01_hello_world.py  01_hello_world.py.html  02_data_analysis.md.html  02_data_analysis.py  02_data_analysis.py.html  03_plotting.md  03_plotting.md.html  03_plotting.py  03_plotting.py.html  04_scientific_computation.md.html  04_scientific_computation.py  04_scientific_computation.py.html  05_advanced_report.md  05_advanced_report.md.html  05_advanced_report.py  05_advanced_report.py.html  06_inline_code.py
src/nhandu/: __init__.py  __main__.py  executor.py  models.py  parser.py  parser_py.py  renderer.py
src/nhandu/converters/: __init__.py  notebook.py
tests/: __init__.py  test_cli.py  test_empty_blocks.py  test_executor.py  test_footer.py  test_inline_python_literate.py  test_jupyter_conversion.py  test_markdown_features.py  test_parser.py  test_renderer.py  test_script_environment.py
tests/fixtures/: basic.md  hidden_blocks.md  with_errors.md  with_inline_code.md  with_metadata.md  with_plots.md
tests/fixtures/notebooks/: notebook_with_hidden_cells.ipynb  notebook_with_metadata.ipynb  notebook_with_outputs.ipynb  simple_notebook.ipynb
